tests/elab/errors/pattern_matching/inexhaustive_match.pion
def empty = fun(x: Bool) => match x {};

def foo = fun(x: Bool) => match x {
    false => 1,
};

def bar = fun(x: Bool) => match x {
    false => 1,
    _ if true => 2, // wildcard is not inexhaustive if it has a guard
};

def baz = fun(x: Bool) => match x {
    false => 1,
    true if true => 2, // literal is not inexhaustive if it has a guard
};
